fix: 84-terminated-users-in-leave-requests